--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
   </head>
 
-
 <body>
+    <header>
+      <div class=sitecontainer>
+<img class=logoimg src=https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png>
+      <span>SECRET AGENT SUPPLY INC.</span>
+      </div><!--sitecontainer-->
+    </header>
+    <div class=main>
+    <div class=maintitle>
+    <h3 class=na>NEW ARRIVAL</h3>
+    <h1 class=title>SPORT BIKES AND MOTORCYLCES</h1>
+    
+    </div><!--main title-->
+    </div><!--main-->
+
 </body>
 </html>
