--- a/index.html
+++ b/index.html
@@ -17,12 +17,26 @@
       </div><!--sitecontainer-->
     </header>
     <div class=main>
+      <div class=main2>
     <div class=maintitle>
     <h3 class=na>NEW ARRIVAL</h3>
     <h1 class=title>SPORT BIKES AND MOTORCYLCES</h1>
-    
     </div><!--main title-->
-    </div><!--main-->
-
+      </div><!--main2-->
+      </div><!--main-->
+    
+    <div class=menu>
+    <div class=m>
+      <ul class=ul>
+        <li class=li>Eyewear</li>
+        <li class=li>Apparel</li>
+        <li class=li>Gadgets</li>
+        <li class=li>Vehicles</li>
+        <li class=li>Classes</li>
+        <li class=li>Contact</li>
+      </ul>
+      </div><!--m-->
+    </div><!--menu-->
+  
 </body>
 </html>
