--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
   </head>
-
-<body>
+ <body>
     <header>
+      <div class=sc>
       <div class=sitecontainer>
 <img class=logoimg src=https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png>
       <span>SECRET AGENT SUPPLY INC.</span>
       </div><!--sitecontainer-->
+      </div><!--sc-->
     </header>
     <div class=main>
       <div class=main2>
@@ -37,6 +38,5 @@
       </ul>
       </div><!--m-->
     </div><!--menu-->
-  
 </body>
 </html>
